--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
         -> align-items = aligne sur l’axe secondaire
             -> l’axe principal est horizontal  
             -> justify-content = aligne en haut / centré verti / en bas
+    @Media queries pour le mobile c'est pratique. 
     -----------------------------------------------------------------------
     Raccourcis : 
     -----------------------------------------------------------------------
@@ -43,7 +44,8 @@
     
      -----------------------------------------------------------------------*/
 
-/* Polices */
+/*-----------Fonts------------*/
+        /* Polices */
 
 @font-face {
   font-family: "Hanken Grotesk";
@@ -58,25 +60,60 @@
   font-weight: 100 900;
   font-style: italic;
 }
-
 @font-face {
   font-family: "Roboto Serif";
   src: url("../fonts/roboto-serif-latin-400-normal.ttf") format("truetype");
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Roboto Serif";
   src: url("../fonts/roboto-serif-latin-400-italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Roboto Serif";
+  src: url("../fonts/roboto-serif-latin-500-normal.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto Serif";
+  src: url("../fonts/roboto-serif-latin-500-italic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
 }
 
-/* Acceuil - Header */
+
+@font-face {
+  font-family: "Roboto Serif";
+  src: url("../fonts/roboto-serif-latin-700-normal.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto Serif";
+  src: url("../fonts/roboto-serif-latin-700-italic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+}
+/* -----------Zone de Test ------------- */
+
+* {
+  outline: 1px solid red;
+}
+
+/* -----------Header------------- */
+           /* Acceuil */
 
 body {
   margin: 0;
+  background-color: #edebd7;
 }
 
 .header-logo img {
@@ -107,12 +144,8 @@ header {
   text-decoration: underline;
   line-height: 1.5;
 }
-
-/* Acceuil - Hero */
-
-main{
-    background-color: #edebd7;
-}
+/* --------------Main-------------- */
+          /* Acceuil - Hero */
 
 
 .hero {
@@ -146,7 +179,7 @@ main{
     display: block;
 }
 
-/* Acceuil - Intro*/
+          /* Acceuil - Intro */
 
 .intro {
     padding: 32px 40px 0px; 
@@ -204,6 +237,104 @@ main{
    
 }
 
+/*------------Footer--------------*/
+          /* Bas de page */
+
 footer{
+    font-family:"Roboto Serif";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.5;
+    font-style: normal;
     background-color: #5b8e7d;
+    color: #211f1b;
+    margin-top: 32px;
+
+}
+
+.footer-inner{
+    max-width:800px;
+    margin: 0px auto 0px;
+    display : flex;
+    justify-content: space-between;
+    align-items:stretch;
+}
+
+.footer-links ul{
+    list-style: none;
+    margin:0;
+    padding:0;
+}
+
+.footer-index{
+    padding : 16px 40px 16px;
+
+}
+
+footer a {
+ color:#211f1b;  
+}
+
+.footer-about{
+    font-family:"Roboto Serif";
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1.5;
+    font-style: normal; 
+}
+
+footer h3{
+    font-family:"Roboto Serif";
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1.5;
+    font-style: normal;
+}
+
+.footer-logo{
+    display:flex;
+    justify-content:center;
+   align-items: center;
+}
+
+.footer-logo img{
+    width :80px;
+    height: auto;
+    display: block;
+}
+
+.footer-credit{
+    text-align: center;
+    margin: 16px auto 0px;
+    max-width:800px;
+    display:flex;
+    justify-content:center;
+
+}
+
+.footer-links,
+.footer-about,
+.footer-logo {
+    flex: 1;
+}
+
+/*------------Version Mobile--------------*/
+
+@media screen and (max-width: 412px) {
+    .hero,
+    .intro {
+    padding-left: 0;
+    padding-right: 0;}
+
+    .hero-inner,
+    .intro-inner {
+    max-width: 100%;
+    padding-left: 0;
+    padding-right: 0;}
+
+    .hero img,
+    .intro img {
+    width: 100%;
+    height: auto;
+    display: block;}  
 }
