Oops, j'enlève le contour rouge de test

--- a/css/style.css
+++ b/css/style.css
@@ -107,10 +107,10 @@
     box-sizing: border-box;
 }
 /* -----------Zone de Test ------------- */
-
+/*
 * {
   outline: 1px solid red;
-}
+} */
 
 /*-----------INDEX.HTML--------------*/
 
